--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "inquirer": "^7.0.0",
     "mysql": "^2.17.1",
     "path": "^0.12.7"
   }
